--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -10,8 +10,13 @@
 ### Чек-лист готовности к домашнему заданию
 
 1. Скачайте и установите **Terraform** версии >=1.8.4 . Приложите скриншот вывода команды ```terraform --version```.
+ ![image](https://github.com/user-attachments/assets/1822b5b7-c756-4e52-8f7e-ab84ffd33ba9)
+  
 2. Скачайте на свой ПК этот git-репозиторий. Исходный код для выполнения задания расположен в директории **01/src**.
+  ![image](https://github.com/user-attachments/assets/37e4d2ce-c6c0-4cb9-98ef-3b90e7aa01f1)
+
 3. Убедитесь, что в вашей ОС установлен docker.
+![image](https://github.com/user-attachments/assets/b9f128e9-638f-41d1-93ee-f760fb00ff80)
 
 ------
 
@@ -27,15 +32,38 @@
 
 1. Перейдите в каталог [**src**](https://github.com/netology-code/ter-homeworks/tree/main/01/src). Скачайте все необходимые зависимости, использованные в проекте. 
 2. Изучите файл **.gitignore**. В каком terraform-файле, согласно этому .gitignore, допустимо сохранить личную, секретную информацию?(логины,пароли,ключи,токены итд)
+   ##### Секреты мы можем созранить в файлике personal.auto.tfvars
 3. Выполните код проекта. Найдите  в state-файле секретное содержимое созданного ресурса **random_password**, пришлите в качестве ответа конкретный ключ и его значение.
+   ##### "result": "WU2It9WrmgVBwBL2",
 4. Раскомментируйте блок кода, примерно расположенный на строчках 29–42 файла **main.tf**.
 Выполните команду ```terraform validate```. Объясните, в чём заключаются намеренно допущенные ошибки. Исправьте их.
-5. Выполните код. В качестве ответа приложите: исправленный фрагмент кода и вывод команды ```docker ps```.
-6. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
-Объясните своими словами, в чём может быть опасность применения ключа  ```-auto-approve```. Догадайтесь или нагуглите зачем может пригодиться данный ключ? В качестве ответа дополнительно приложите вывод команды ```docker ps```.
-8. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
-9. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **ОБЯЗАТЕЛЬНО НАЙДИТЕ В ПРЕДОСТАВЛЕННОМ КОДЕ**, а затем **ОБЯЗАТЕЛЬНО ПОДКРЕПИТЕ** строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+![image](https://github.com/user-attachments/assets/117922f3-98f9-4c6e-8365-5072b4caa4fd)
 
+##### on main.tf line 24, in resource "docker_image": задан ресурс, но не задано уникальное имя ресурса. Назовем его "nginx_image". Следом меняем строчку image = docker_image.nginx.image_id
+##### on main.tf line 29, in resource "docker_container" "1nginx": не правильный нейминг. Имя должно начинаться с буквы, переименуем в "nginx1"
+##### ошибку нам не выдало, но строка name  = "example_${random_password.random_string_FAKE.resulT} не сработает. Имя ресурса у нас random_string, а resulT должен быть в нижнем регистре
+
+5. Выполните код. В качестве ответа приложите: исправленный фрагмент кода и вывод команды ```docker ps```.
+   ![image](https://github.com/user-attachments/assets/00caf67b-3f9f-47fa-8f4b-1c9f6f2cedde)
+   ![image](https://github.com/user-attachments/assets/190e3968-4ae2-4258-a867-1215ae9abd7b)
+
+7. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
+![image](https://github.com/user-attachments/assets/71298a4c-e8ab-4276-8977-61a594509e57)
+
+
+Объясните своими словами, в чём может быть опасность применения ключа  ```-auto-approve```. Догадайтесь или нагуглите зачем может пригодиться данный ключ? В качестве ответа дополнительно приложите вывод команды ```docker ps```.
+![image](https://github.com/user-attachments/assets/9e32d96d-ad7b-4f1d-b67f-8d9a0ff1292d)
+##### terraform apply -auto-approve опасен тем, что мы не проверяем планирование и можем потерять ресурсы при пересоздании. Да, этот ключ подойдет для автоматических процессов в CI\CD, но чувствительные данные при этом должны быть надежно защищены. В данном случае мы потеряли только содержимое контейнера. А вот содержимое БД терять не стоило бы.
+
+7. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**.
+   ![image](https://github.com/user-attachments/assets/342829ba-5d21-47ef-8baa-747806d62bac)
+   ![image](https://github.com/user-attachments/assets/67daf4c0-bc88-420c-a3ba-fb089f4a7ad3)
+   ![image](https://github.com/user-attachments/assets/7b921cdd-529c-4d08-9f6a-a869a5694159)
+
+9. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **ОБЯЗАТЕЛЬНО НАЙДИТЕ В ПРЕДОСТАВЛЕННОМ КОДЕ**, а затем **ОБЯЗАТЕЛЬНО ПОДКРЕПИТЕ** строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+![image](https://github.com/user-attachments/assets/819cbc57-4847-40c0-9615-f256fefa0561)
+##### Из-за строчки keep_locally = true наш образ не удаляется.
+keep_locally (Boolean) If true, then the Docker image won't be deleted on destroy operation. If this is false, it will delete the image from the docker local storage on destroy operation.
 
 ------
 
