--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -75,6 +75,8 @@ keep_locally (Boolean) If true, then the Docker image won't be deleted on destro
 ### Задание 2*
 
 1. Создайте в облаке ВМ. Сделайте это через web-консоль, чтобы не слить по незнанию токен от облака в github(это тема следующей лекции). Если хотите - попробуйте сделать это через terraform, прочитав документацию yandex cloud. Используйте файл ```personal.auto.tfvars``` и гитигнор или иной, безопасный способ передачи токена!
+   https://github.com/Nightnek/ter-homeworks/blob/main/01/src/cloud.tf
+   
 2. Подключитесь к ВМ по ssh и установите стек docker.
 3. Найдите в документации docker provider способ настроить подключение terraform на вашей рабочей станции к remote docker context вашей ВМ через ssh.
 4. Используя terraform и  remote docker context, скачайте и запустите на вашей ВМ контейнер ```mysql:8``` на порту ```127.0.0.1:3306```, передайте ENV-переменные. Сгенерируйте разные пароли через random_password и передайте их в контейнер, используя интерполяцию из примера с nginx.(```name  = "example_${random_password.random_string.result}"```  , двойные кавычки и фигурные скобки обязательны!) 
@@ -86,8 +88,9 @@ keep_locally (Boolean) If true, then the Docker image won't be deleted on destro
       - "MYSQL_PASSWORD=${...}"
       - MYSQL_ROOT_HOST="%"
 ```
-
-6. Зайдите на вашу ВМ , подключитесь к контейнеру и проверьте наличие секретных env-переменных с помощью команды ```env```. Запишите ваш финальный код в репозиторий.
+https://github.com/Nightnek/ter-homeworks/blob/main/01/python_server.tf
+5. Зайдите на вашу ВМ , подключитесь к контейнеру и проверьте наличие секретных env-переменных с помощью команды ```env```. Запишите ваш финальный код в репозиторий.
+![image](https://github.com/user-attachments/assets/eb62ad93-948f-47cc-a812-d52b40077864)
 
 ### Задание 3*
 1. Установите [opentofu](https://opentofu.org/)(fork terraform с лицензией Mozilla Public License, version 2.0) любой версии
