--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -94,7 +94,12 @@ https://github.com/Nightnek/ter-homeworks/blob/main/01/python_server.tf
 
 ### Задание 3*
 1. Установите [opentofu](https://opentofu.org/)(fork terraform с лицензией Mozilla Public License, version 2.0) любой версии
+   ![image](https://github.com/user-attachments/assets/e10bda0b-2d39-45e1-96de-da6a1653baad)
+
 2. Попробуйте выполнить тот же код с помощью ```tofu apply```, а не terraform apply.
+   ![image](https://github.com/user-attachments/assets/67ef6aac-13a8-4e9c-9c1c-4736832034d3)
+   ![image](https://github.com/user-attachments/assets/22eecac6-4d01-46d9-9bd8-867729fb820b)
+
 ------
 
 ### Правила приёма работы
