--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -28,16 +28,33 @@
 
 1. Изучите проект. В файле variables.tf объявлены переменные для Yandex provider.
 2. Создайте сервисный аккаунт и ключ. [service_account_key_file](https://terraform-provider.yandexcloud.net).
-4. Сгенерируйте новый или используйте свой текущий ssh-ключ. Запишите его открытую(public) часть в переменную **vms_ssh_public_root_key**.
-5. Инициализируйте проект, выполните код. Исправьте намеренно допущенные синтаксические ошибки. Ищите внимательно, посимвольно. Ответьте, в чём заключается их суть.
-6. Подключитесь к консоли ВМ через ssh и выполните команду ``` curl ifconfig.me```.
+   ![image](https://github.com/user-attachments/assets/f4c3043c-c176-4242-808b-cb5a07c968a7)
+3. Сгенерируйте новый или используйте свой текущий ssh-ключ. Запишите его открытую(public) часть в переменную **vms_ssh_public_root_key**.
+4. Инициализируйте проект, выполните код. Исправьте намеренно допущенные синтаксические ошибки. Ищите внимательно, посимвольно. Ответьте, в чём заключается их суть.
+   
+   ---
+   Нет конфигурации v4.
+   Пишется standard, а не standart
+   ---
+   
+5. Подключитесь к консоли ВМ через ssh и выполните команду ``` curl ifconfig.me```.
 Примечание: К OS ubuntu "out of a box, те из коробки" необходимо подключаться под пользователем ubuntu: ```"ssh ubuntu@vm_ip_address"```. Предварительно убедитесь, что ваш ключ добавлен в ssh-агент: ```eval $(ssh-agent) && ssh-add``` Вы познакомитесь с тем как при создании ВМ создать своего пользователя в блоке metadata в следующей лекции.;
-8. Ответьте, как в процессе обучения могут пригодиться параметры ```preemptible = true``` и ```core_fraction=5``` в параметрах ВМ.
+![image](https://github.com/user-attachments/assets/6aa945fc-b374-47e6-b4d6-2fe185a2d0f7)
+
+6. Ответьте, как в процессе обучения могут пригодиться параметры ```preemptible = true``` и ```core_fraction=5``` в параметрах ВМ.
+---
+Эти параметры существенно снижают стоимость ВМ.
+Для понимания возможностей экономии ресурсов можно пользоваться таблицей: https://yandex.cloud/ru/docs/compute/concepts/performance-levels
+---
 
 В качестве решения приложите:
 
 - скриншот ЛК Yandex Cloud с созданной ВМ, где видно внешний ip-адрес;
+- ![image](https://github.com/user-attachments/assets/f8bc496a-49c2-4161-9d43-512b416101b1)
+
 - скриншот консоли, curl должен отобразить тот же внешний ip-адрес;
+- ![image](https://github.com/user-attachments/assets/9f2bf805-fb5b-48f7-a7aa-84e9dd5a7c94)
+
 - ответы на вопросы.
 
 
