--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -32,20 +32,20 @@
 3. Сгенерируйте новый или используйте свой текущий ssh-ключ. Запишите его открытую(public) часть в переменную **vms_ssh_public_root_key**.
 4. Инициализируйте проект, выполните код. Исправьте намеренно допущенные синтаксические ошибки. Ищите внимательно, посимвольно. Ответьте, в чём заключается их суть.
    
-   ---
-   Нет конфигурации v4.
-   Пишется standard, а не standart
-   ---
+   
+   _Нет конфигурации v4.
+   Пишется standard, а не standart_
+   
    
 5. Подключитесь к консоли ВМ через ssh и выполните команду ``` curl ifconfig.me```.
 Примечание: К OS ubuntu "out of a box, те из коробки" необходимо подключаться под пользователем ubuntu: ```"ssh ubuntu@vm_ip_address"```. Предварительно убедитесь, что ваш ключ добавлен в ssh-агент: ```eval $(ssh-agent) && ssh-add``` Вы познакомитесь с тем как при создании ВМ создать своего пользователя в блоке metadata в следующей лекции.;
 ![image](https://github.com/user-attachments/assets/6aa945fc-b374-47e6-b4d6-2fe185a2d0f7)
 
 6. Ответьте, как в процессе обучения могут пригодиться параметры ```preemptible = true``` и ```core_fraction=5``` в параметрах ВМ.
----
-Эти параметры существенно снижают стоимость ВМ.
-Для понимания возможностей экономии ресурсов можно пользоваться таблицей: https://yandex.cloud/ru/docs/compute/concepts/performance-levels
----
+
+_Эти параметры существенно снижают стоимость ВМ.
+Для понимания возможностей экономии ресурсов можно пользоваться таблицей: https://yandex.cloud/ru/docs/compute/concepts/performance-levels_
+
 
 В качестве решения приложите:
 
