--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -191,6 +191,9 @@ test = [
   },
 ]
 ```
+![image](https://github.com/user-attachments/assets/766b3fdc-d659-4f0b-92ba-d9690a284071)
+
+
 2. Напишите выражение в terraform console, которое позволит вычленить строку "ssh -o 'StrictHostKeyChecking=no' ubuntu@62.84.124.117" из этой переменной.
 ------
 
