--- a/03/hw-03.md
+++ b/03/hw-03.md
@@ -27,9 +27,8 @@
 2. Заполните файл personal.auto.tfvars.
 3. Инициализируйте проект, выполните код. Он выполнится, даже если доступа к preview нет.
 
-Примечание. Если у вас не активирован preview-доступ к функционалу «Группы безопасности» в Yandex Cloud, запросите доступ у поддержки облачного провайдера. Обычно его выдают в течение 24-х часов.
-
 Приложите скриншот входящих правил «Группы безопасности» в ЛК Yandex Cloud или скриншот отказа в предоставлении доступа к preview-версии.
+![image](https://github.com/user-attachments/assets/3023f0e0-4451-44e2-86c0-00d34f3cf38c)
 
 ------
 
