--- a/03/hw-03.md
+++ b/03/hw-03.md
@@ -45,6 +45,7 @@ variable "each_vm" {
 4. ВМ из пункта 2.1 должны создаваться после создания ВМ из пункта 2.2.
 5. Используйте функцию file в local-переменной для считывания ключа ~/.ssh/id_rsa.pub и его последующего использования в блоке metadata, взятому из ДЗ 2.
 6. Инициализируйте проект, выполните код.
+![image](https://github.com/user-attachments/assets/5c01c743-9bb1-4ec9-b06b-7df573ad81ac)
 
 ------
 
