--- a/03/hw-03.md
+++ b/03/hw-03.md
@@ -53,6 +53,8 @@ variable "each_vm" {
 
 1. Создайте 3 одинаковых виртуальных диска размером 1 Гб с помощью ресурса yandex_compute_disk и мета-аргумента count в файле **disk_vm.tf** .
 2. Создайте в том же файле **одиночную**(использовать count или for_each запрещено из-за задания №4) ВМ c именем "storage"  . Используйте блок **dynamic secondary_disk{..}** и мета-аргумент for_each для подключения созданных вами дополнительных дисков.
+![image](https://github.com/user-attachments/assets/aefb0b16-41a3-403c-91ab-ec589c2bbdb9)
+![image](https://github.com/user-attachments/assets/3e0812fa-b56b-40c0-ae11-8aa890ca065a)
 
 ------
 
